<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.mainFragments.CongratsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_24sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/like1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/popin_bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_email_has_been_changed_successfully"
           android:textSize="@dimen/_14ssp"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/popin_regular"
            />

        <TextView
            android:id="@+id/txtGotoHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_home"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/dark_pink"
            android:fontFamily="@font/poppins_semibold"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>